Fix schema, seed data, hook up to front end

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "6.2.95",
+    "@supabase/supabase-js": "^2.43.5",
     "core-js": "^3.34.0",
     "idb-keyval": "^6.2.1",
     "pinia": "^2.1.7",
