--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
+    "module": "ESNext",
     "target": "ESNext",
     "jsx": "preserve",
     "lib": ["DOM", "ESNext"],
     "baseUrl": ".",
-    "module": "ESNext",
     "moduleResolution": "bundler",
     "paths": {
       "@/*": ["src/*"]
@@ -22,7 +22,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "importHelpers": true
   },
   "include": [
     "./src/typed-router.d.ts"
